# CTFs

./: .gitignore  LICENSE  README.md
picoctf/2Warm/: README.md
picoctf/ARMssembly_0/: README.md  chall.S
picoctf/ARMssembly_1/: README.md  chall_1.S  chall_1.elf
picoctf/Cookies/: README.md
picoctf/The_Numbers/: README.md  solution.py
picoctf/catch_me_outside/: README.md  flag.txt  solve.py
picoctf/crackme-py/: README.md  crackme.py
picoctf/easy_peasy/: README.md  solution.py
picoctf/get_ahead/: README.md
picoctf/glory_of_the_garden/: README.md
picoctf/information/: README.md
picoctf/keygenme_py/: README.md  reverse_engineer.py
picoctf/macrohard_weakedge/: README.md
picoctf/magikarp_ground_mission/: README.md
picoctf/matryoshka_doll/: README.md
picoctf/mind_your_ps_and_qs/: README.md  decrypt.py  pyproject.toml
picoctf/mod26/: README.md  main.py
picoctf/new_caesar/: README.md  decode_new_caesar.py  new_caesar.py
picoctf/nice_netcat/: README.md  main.py
picoctf/obedient_cat/: README.md
picoctf/python_wrangling/: README.md
picoctf/scavenger_hunt/: README.md
picoctf/shop/: README.md
picoctf/speeds_and_feeds/: README.md
picoctf/static_ain't_always_noise/: README.md
picoctf/stonks/: Makefile  README.md  api  gdb_debugging.md  input  input2  main.py  vuln  vuln.c
picoctf/tab,_tab,_attack/: README.md
picoctf/transformation/: README.md  main.py
picoctf/tunn3l_v1s10n/: README.md
picoctf/vault-door-training/: README.md
picoctf/wave_a_flag/: README.md
picoctf/wireshark_doo_dooo_do_doo.../: README.md
(+1 files in other folders)
